[tool.poetry]
name = "url-shortener-b"
version = "0.1.0"
description = ""
authors = ["Luis Quiñones Requelme <lpaandres2020@gmail.com>"]
readme = "README.md"
packages = [{include = "url_shortener_b"}]

[tool.poetry.dependencies]
python = "^3.10"
nanoid = "^2.0.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
autopep8 = "^2.0.2"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
